B&L QA/objects/Femto_Procedure_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Femto Procedure Details</relationshipLabel>
        <relationshipName>Femto_Procedure_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B+L</fullName>
                </value>
                <value>
                    <fullName>ALCON</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>ZIEMER</fullName>
                </value>
                <value>
                    <fullName>ZEISS</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume_by_Year__c</fullName>
        <label>Estimated Volume by Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Femto Procedure Detail</label>
    <nameField>
        <displayFormat>FM-{000000}</displayFormat>
        <label>Femto Procedure Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Femto Procedure Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>